--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
                    
                     <img src="assests/Images/logo.svg" alt="logo" />
 
-                    <span class="material-symbols-outlined more-button">
-                        menu
+                    <span class="more-button">
+                        <img src="assests/Images/Icons/hamburger-menu.svg" alt="hamburger" style="width: 30px;margin-left: 20px;" />
                     </span>
+
+                   
 
                     </a>
 
